maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:32: error: ')' expected but 'if' found.
    if(!aMurNord(getX(),getY()-1) && getIndication(getX(),getY()+1)<ind){
    ^